# hichi

./: Error.hs  IChat.hs  IChatMain.hs  Main.hs  State.hs  TODO  build_n_run.sh  hichat.cabal  hichi.cabal
Codec/: RC4.hs  Test.hs
Hichi/: IChatMain.hs  State.hs
IChat/: Aux.hs  C2S.hs  Command.hs  IO.hs  Message.hs  S2C.hs
Network/: IChat.hs
Network/IChat/: Aux.hs  C2S.hs  Command.hs  Error.hs  IO.hs  Message.hs  S2C.hs
