name:                hichat
version:             0.0.1

license:             GPL
license-file:        COPYING
author:              Sergei Trofimovich <slyfox@inbox.ru>
maintainer:          Sergei Trofimovich <slyfox@inbox.ru>

stability:           experimental
category:            network
synopsis:            haskell robot+library for IChat protocol
description:         haskell robot+library for IChat protocol

build-depends:       base, network, bytestring, mtl, array

build-type:          Simple
tested-with:         GHC==6.10.1

executable:          hichat
main-is:             Main.hs

--- RC4 testsuite
-- main-is:             Codec/Test.hs

ghc-options:         -funbox-strict-fields -Wall
ghc-prof-options:    -prof -auto-all
