name:                hichi
version:             0.0.1

license:             GPL
license-file:        COPYING
author:              Sergei Trofimovich <slyfox@inbox.ru>
maintainer:          Sergei Trofimovich <slyfox@inbox.ru>

stability:           experimental
category:            network
synopsis:            haskell robot for IChat protocol
description:         haskell robot for IChat protocol


cabal-version:       >= 1.2
build-type:          Simple

tested-with:         GHC==6.10.1

extra-source-files:  TODO

executable           hichi
    main-is:             Main.hs

    build-depends:       base >= 4,
                         network,
                         bytestring,
                         mtl,
                         array

    other-modules:       Codec.RC4
                         Hichi.IChatMain
                         Hichi.State
                         Network.IChat
                         Network.IChat.Aux
                         Network.IChat.IO
                         Network.IChat.C2S
                         Network.IChat.Error
                         Network.IChat.S2C
                         Network.IChat.Command
                         Network.IChat.Message

    ghc-options:         -funbox-strict-fields -Wall
    ghc-prof-options:    -auto-all

test-suite test-rc4
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       ., Codec
  main-is:              Test.hs
  other-modules:       Codec.RC4
